--- a/articles/templates/navbar.html
+++ b/articles/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color:rgb(8, 171, 247);">
     <div class="container">
-      <a class="navbar-brand" href="{%url 'article_list'%}">DjangoBlog</a>
+      <a class="navbar-brand" href="{%url 'article_list'%}">DjBlogs</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
